--- a/tools/get_defconfig
+++ b/tools/get_defconfig
@@ -1,4 +1,5 @@
 #!/bin/bash
+# SPDX-License-Identifier: GPL-2.0-only
 
 #  (get_defconfig), (simple script to pull a defconfig for a particular arch)
 
